bevy_asset_loader/tests/ui/no_default.stderr
error[E0277]: the trait bound `NoDefault: FromWorld` is not satisfied
 --> tests/ui/no_default.rs:8:5
  |
8 |     no_default: NoDefault,
  |     ^^^^^^^^^^ the trait `std::default::Default` is not implemented for `NoDefault`, which is required by `NoDefault: FromWorld`
  |
  = help: the following other types implement trait `FromWorld`:
            auto_exposure::node::AutoExposureNode
            bevy::prelude::State<S>
            Children
            Parent
            CASNode
            SceneLoader
            Material2dPipeline<M>
            GpuPreprocessNode
          and $N others
  = note: required for `NoDefault` to implement `FromWorld`
help: consider annotating `NoDefault` with `#[derive(Default)]`
  |
11+ #[derive(Default)]
12| struct NoDefault;
  |
